fix: wave 1 issues
